Add hero full page implementation, implement own color set, misc. changes

--- a/site/config.toml
+++ b/site/config.toml
@@ -9,7 +9,7 @@ paginate = 10
 
 [params]
   GithubURL = "https://github.com/yuzu-emu/yuzu"
-  ProjectName = "yuzu emulator project"
+  ProjectName = "yuzu Emulator Project"
 
 [Languages]
   [Languages.en]
