Added menu to config. Updated hero to open buttons in new tab.

--- a/site/config.toml
+++ b/site/config.toml
@@ -7,8 +7,13 @@ theme = "shared-bulma-theme"
 # Define how many objects appear per pagination.
 paginate = 10
 
+[[menu.main]]
+    name = "blog"
+    url = "/"
+
 [params]
   GithubURL = "https://github.com/yuzu-emu/yuzu"
+  TwitterURL = "https://twitter.com/notfunnei"
   ProjectName = "yuzu Emulator Project"
 
 [Languages]
