--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "site/themes/shared-bulma-theme"]
 	path = site/themes/shared-bulma-theme
 	url = https://github.com/chris062689/shared-bulma-theme.git
+[submodule "scripts/shared-hugo-scripts"]
+	path = scripts/shared-hugo-scripts
+	url = https://github.com/chris062689/shared-hugo-scripts.git
