Removed sidebar. Added twitter-avatar, updated config.

--- a/site/config.toml
+++ b/site/config.toml
@@ -9,7 +9,7 @@ paginate = 10
 
 [params]
   GithubURL = "https://github.com/yuzu-emu/yuzu"
-  TwitterURL = "https://twitter.com/notfunnei"
+  TwitterURL = "https://twitter.com/yuzu"
   ProjectName = "yuzu Emulator Project"
 
 [Languages]
