--- a/site/config.toml
+++ b/site/config.toml
@@ -7,6 +7,24 @@ theme = "shared-bulma-theme"
 # Define how many objects appear per pagination.
 paginate = 10
 
+[[menu.main]]
+    name = "frequently asked questions"
+    weight = 1
+    identifier = "faq"
+    url = "#faq"
+
+[[menu.main]]
+    name = "contributing"
+    weight = 2
+    identifier = "contribute"
+    url = "#contribute"
+
+[[menu.main]]
+    name = "updates"
+    weight = 3
+    identifier = "updates"
+    url = "#updates"
+
 [params]
   GithubURL = "https://github.com/yuzu-emu/yuzu"
   TwitterURL = "https://twitter.com/yuzu"
