--- a/site/config.toml
+++ b/site/config.toml
@@ -29,7 +29,7 @@ paginate = 10
   DiscordURL = "https://discord.gg/gz9pz97"
   TwitterURL = "https://twitter.com/yuzuemu"
   GithubURL = "https://github.com/yuzu-emu/yuzu"
-  ProjectName = "yuzu Emulator Project"
+  ProjectName = "Yuzu Emulator Team"
 
 [Languages]
   [Languages.en]
