--- a/site/config.toml
+++ b/site/config.toml
@@ -17,7 +17,7 @@ paginate = 10
   name = "wiki"
   weight = 1
   identifier = "wiki"
-  url = "/wiki/home"
+  url = "/wiki/home/"
 
 
 [[menu.main]]
