--- a/site/config.toml
+++ b/site/config.toml
@@ -30,6 +30,8 @@ paginate = 10
   DiscordURL = "https://discord.gg/gz9pz97"
   TwitterURL = "https://twitter.com/yuzuemu"
   GithubURL = "https://github.com/yuzu-emu/yuzu"
+  GoogleAdsenseClient = "ca-pub-4126545610079023"
+  GoogleAdsenseSlot = "5525580072"
 
 [Languages]
   [Languages.en]
