--- a/site/config.toml
+++ b/site/config.toml
@@ -32,6 +32,7 @@ paginate = 10
   GithubURL = "https://github.com/yuzu-emu/yuzu"
   GoogleAdsenseClient = "ca-pub-4126545610079023"
   GoogleAdsenseSlot = "5525580072"
+  GoogleAnalyticsTrackingId = "UA-112443698-1"
 
 [Languages]
   [Languages.en]
