Updated shared theme. Moved downloads.js to it's own script file. Updated scss for pagination. Downloads.md is now just text.

--- a/site/config.toml
+++ b/site/config.toml
@@ -5,7 +5,7 @@ DefaultContentLanguage = "en"
 theme = "shared-bulma-theme"
 
 # Define how many objects appear per pagination.
-paginate = 10
+paginate = 20
 
 [[menu.main]]
   name = "about"
@@ -49,4 +49,4 @@ paginate = 10
 
 [outputs]
 home = [ "HTML", "RSS" ]
-section = [ "HTML", "JSON" ]
+section = [ "HTML" ]
