Updated the Discord invite link.

--- a/site/config.toml
+++ b/site/config.toml
@@ -33,7 +33,7 @@ paginate = 20
 
 [params]
   BulmaPrimaryShade = "is-dark"
-  DiscordURL = "https://discord.gg/XQV6dn9"
+  DiscordURL = "https://discord.gg/u77vRWY"
   TwitterURL = "https://twitter.com/yuzuemu"
   GithubURL = "https://github.com/yuzu-emu/yuzu"
   GoogleAdsenseClient = "ca-pub-4126545610079023"
