Updated submodules. Updated SCSS for +spacing, entries CSS, updated config for descriptions. Gulp now uses yarn. etc.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules/
+yarn-error.log
 
 # Binaries
 site/hugo
@@ -13,12 +14,12 @@ site/public/
 # Dynamic content imported on deploy.
 site/content/wiki/
 site/content/game/
+site/content/entry/tweet_*
 site/static/images/game/icons
 site/static/images/game/boxart
 !site/static/images/game/boxart/default.png
 site/static/images/screenshots0/
 site/static/savefiles/
-site/data/twitter.json
 
 # Filesystem stuff.
 .directory
