--- a/site/config.toml
+++ b/site/config.toml
@@ -42,6 +42,7 @@ paginate = 20
 
 [Params.fmt]
   ISO8601 = "2006-01-02T15:04:05-07:00"
+  Date = "January 02 2006"
 
 [Languages]
   [Languages.en]
