Website Update - Blog, Sidebar, Bulma 0.7.0 (#16)
* Updated submodules. Updated SCSS for +spacing, entries CSS, updated config for descriptions. Gulp now uses yarn. etc.

* Added authors.json, sidebar, and yarn.lock file.

* Updated shared LESS. Updated gulp to combine js vendor files into main script. Refactored partials / renamed. Added blank template files for partials. Updated homepage.

* Updated homepage, banners, etc.

* Removed twitterBanner placeholder.

* Updated sidebar with GA.

--- a/site/config.toml
+++ b/site/config.toml
@@ -8,10 +8,10 @@ theme = "shared-bulma-theme"
 paginate = 20
 
 [[menu.main]]
-  name = "about"
+  name = "blog"
   weight = 1
-  identifier = "about"
-  url = "/#about-section"
+  identifier = "blog"
+  url = "/"
 
 [[menu.main]]
   name = "download"
@@ -31,7 +31,7 @@ paginate = 20
   identifier = "donate"
   url = "/donate"
 
-[params]
+[Params]
   BulmaPrimaryShade = "is-dark"
   DiscordURL = "https://discord.gg/u77vRWY"
   TwitterURL = "https://twitter.com/yuzuemu"
@@ -40,10 +40,14 @@ paginate = 20
   GoogleAdsenseSlot = "5525580072"
   GoogleAnalyticsTrackingId = "UA-112443698-1"
 
+[Params.fmt]
+  ISO8601 = "2006-01-02T15:04:05-07:00"
+  Date = "January 02 2006"
+
 [Languages]
   [Languages.en]
     title = "yuzu"
-    tagline = "An experimental emulator for the Nintendo Switch"
+    tagline = "Nintendo Switch Emulator"
     description = "yuzu is a highly experimental open-source emulator for the Nintendo Switch."
     weight = 1
 
