--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 # Build status located at https://travis-ci.org/yuzu-emu/
 
 language: node_js
-node_js: node
+node_js:
+  - "10"
 cache: yarn
 
 install:
