Updated hugo and gulp dependencies.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ cache: yarn
 install:
   - echo '========== Installing gulp & dependencies =========='
   - sudo apt-get install graphicsmagick
-  - wget -O hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.31.1/hugo_0.31.1_Linux-64bit.deb
+  - wget -O hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.52/hugo_0.52_Linux-64bit.deb
   - sudo dpkg -i hugo.deb
-  - yarn global add gulp
   - yarn install
 
 before_script:
@@ -18,7 +17,7 @@ before_script:
 
 script:
   - echo '========== Starting gulp deploy task =========='
-  - gulp all --production
+  - yarn run gulp all --production
 
 deploy:
  provider: pages
