--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
   "dependencies": {
     "bulma": "0.7.2",
     "cssnano": "^4.1.7",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-image-resize": "^0.13.0",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-util": "^3.0.8",
-    "merge-stream": "^1.0.1",
-    "run-sequence": "^2.2.1"
+    "merge-stream": "^1.0.1"
   },
   "devDependencies": {
     "browser-sync": "^2.23.5",
