ci: add public environment variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,16 @@ jobs:
         wget -O hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.52/hugo_0.52_Linux-64bit.deb
         sudo dpkg -i hugo.deb
         yarn install
+        # Install dependencies one-by-one to avoid race-conditions
+        pushd ./scripts/shared-hugo-scripts/wiki/ && yarn && popd
+        pushd ./scripts/shared-hugo-scripts/compatdb/ && yarn && popd
         hugo version
     - name: Build
+      env:
+        GITHUB_WIKI_URL: 'https://github.com/yuzu-emu/yuzu-games-wiki.wiki.git'
+        TENANT: 'yuzu'
       run: |
          echo '========== Starting gulp deploy task =========='
-         # Install dependencies one-by-one to avoid race-conditions
-         pushd ./scripts/shared-hugo-scripts/wiki/ && yarn && popd
-         pushd ./scripts/shared-hugo-scripts/compatdb/ && yarn && popd
          yarn run build
     - name: Deploy
       if: ${{ ! github.base_ref }}
