--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "bulma": "0.9.2",
     "concurrent-transform": "^1.0.0",
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.2",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
@@ -29,10 +29,11 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "merge-stream": "^2.0.0",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "postcss": "^8.2"
   },
   "devDependencies": {
     "browser-sync": "^2.26.14",
-    "xo": "^0.38.2"
+    "xo": "^0.40.1"
   }
 }
