--- a/package.json
+++ b/package.json
@@ -18,24 +18,25 @@
   },
   "homepage": "https://github.com/yuzu-emu/yuzu-emu.github.io#readme",
   "dependencies": {
-    "bulma": "0.9.2",
+    "bulma": "0.9.3",
     "concurrent-transform": "^1.0.0",
-    "cssnano": "^5.0.6",
+    "cssnano": "^5.0.8",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-image-resize": "^0.13.1",
-    "gulp-postcss": "^9.0.0",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
-    "hugo-bin": "0.71.1",
+    "gulp-sass": "^5.0.0",
+    "hugo-bin": "0.76.1",
     "merge-stream": "^2.0.0",
     "minimist": "^1.2.5",
-    "postcss": "^8.3"
+    "postcss": "^8.3",
+    "sass": "^1.39.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.14",
-    "xo": "^0.40.2"
+    "browser-sync": "^2.27.5",
+    "xo": "^0.44.0"
   },
   "hugo-bin": {
     "buildTags": "extended"
