--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         submodules: true
     - name: Install dependencies
-      run: sudo apt-get install graphicsmagick
+      run: sudo apt-get update && sudo apt-get install graphicsmagick
     - name: Build
       env:
         GITHUB_WIKI_URL: 'https://github.com/yuzu-emu/yuzu.wiki.git'
