feat(tree-wide): improve site building performance ...
* use Hugo to build SASS and resize images
* cache Hugo's image resizing output

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ site/static/images/game/boxart
 !site/static/images/game/boxart/default.png
 site/static/images/screenshots0/
 site/static/savefiles/
+site/resources/_gen/
 
 # Filesystem stuff.
 .directory
