--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,11 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Cache Rendered Data
+      uses: actions/cache@v2
+      with:
+        path: ./site/resources
+        key: ${{ runner.os }}-rendered
     - name: Install dependencies
       run: sudo apt-get update && sudo apt-get install graphicsmagick
     - name: Build
@@ -26,10 +31,10 @@ jobs:
       run: ./.ci/build.sh
     - name: Deploy
       if: ${{ ! github.base_ref }}
-      uses: JamesIves/github-pages-deploy-action@3.7.1
+      uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: master
-        FOLDER: build
-        CLEAN: true
-        SINGLE_COMMIT: true
+        token: ${{ secrets.GITHUB_TOKEN }}
+        branch: master
+        folder: build
+        clean: true
+        single-commit: true
