site/config: increase build timeout ...
... so that if you are running the build on Netlify or on your computer
from the early 2000s, Hugo will not fail

--- a/site/config.toml
+++ b/site/config.toml
@@ -6,7 +6,8 @@ theme = "shared-bulma-theme"
 
 # Define how many objects appear per pagination.
 paginate = 20
-timeout = 60000
+# Define build timeout for each page (incl. image processing).
+timeout = 300000
 
 [[menu.main]]
   name = "Blog"
