site: add github style hovercards

--- a/site/config.toml
+++ b/site/config.toml
@@ -79,3 +79,7 @@ section = [ "HTML" ]
   [markup.goldmark]
     [markup.goldmark.renderer]
       unsafe = true
+
+[security]
+  [security.funcs]
+    getenv = ['^HUGO_', 'TENANT']
